fix add z-index to lang block

--- a/portfolio_ux_ui/css/style.css
+++ b/portfolio_ux_ui/css/style.css
@@ -418,6 +418,7 @@ a{
     left: 0;
     width: 100%;
     height: 90px;
+    z-index: 2;
     -webkit-transition: .2s linear;
     -o-transition: .2s linear;
     transition: .2s linear;
@@ -479,7 +480,7 @@ a{
     display: none;
 }
 .header__lang{
-    z-index: 2;
+    z-index: 1;
 }
 .header__lang a{
     color: #828282;
